tests/paczka2/big_fuzzy/11712393.err
Error in line 3: nn42i S187 11,9
Error in line 9: S739 A849 53,2
Error in line 22: Xfhua6Q S739 67,7
Error in line 21: w8VCfae A849 89,3
Error in line 36: Xfhua6Q S187 68,3
Error in line 52: Xfhua6Q S60 57,1
Error in line 42: S739 A849 66,6
Error in line 53: nMGfGMb S187 14,8
Error in line 63: S739 S60 487,6
Error in line 72: S739 S187 303,7
Error in line 73: S739 S60 49,3
Error in line 74: S739 S739 47,6
Error in line 80: nMGfGMb S187 49,1
Error in line 86: hZOs A849 59,7
Error in line 99: w8VCfae S187 -5,5
Error in line 82: S739 S739 11,4
Error in line 95: w8VCfae S187 90,0
Error in line 98: nMGfGMb S739 304,3
Error in line 106: nMGfGMb S739 66,5
Error in line 116: S739 A849 220,4
Error in line 131: MMW S60 13,80
Error in line 130: hZOs S187 38,1
Error in line 127: nn42i S60 72,7
Error in line 166: w8VCfae S60 76,3
Error in line 164: nn42i S187 20,4
Error in line 162: Xfhua6Q S739 80,1
Error in line 174: w8VCfae A849 28,1
Error in line 185: w8VCfae S739 72,4
Error in line 181: Xfhua6Q S187 68,8
Error in line 192: MMW S739 80,1
Error in line 199: S739 S739 77,2
Error in line 201: MMW S739 1,6
Error in line 210: S739 A849 64,9
Error in line 214: w8VCfae S739 10,6
Error in line 209: Xfhua6Q A849 81,1
Error in line 224: S739 S187 73,9
Error in line 237: nMGfGMb S187 54,61
Error in line 230: Xfhua6Q S60 35,6
Error in line 238: Xfhua6Q S187 27,6
Error in line 236: nMGfGMb S187 13,1
